--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,6 @@ steps:
 - script: |
     npm install -g @angular/cli
     npm install
-  displayName: 'npm install'
-  
-  - script: |
     npm test -- --watch=false
-  displayName: 'npm test'
+    ng build --prod
+  displayName: 'npm install and build'
