--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,10 @@ steps:
     npm test -- --browsers ChromeHeadless --watch=false
     ng build --prod
   displayName: 'npm install and build'
+  
+- task: PublishBuildArtifacts@1
+    displayName: "Publish artifacts"
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)/dist/servicetest'
+      ArtifactName: app
+      publishLocation: Container  
