--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
   displayName: 'npm install and build'
   
 - task: PublishBuildArtifacts@1
-    displayName: "Publish artifacts"
+    displayName: 'Publish artifacts'
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)/dist/servicetest'
       ArtifactName: app
